--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "parcel": "^1.12.3"
   },
   "devDependencies": {
+    "@types/react": "^16.8.21",
+    "@types/react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "typescript": "^3.5.2"
   }
 }
