--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "parcel": "^1.12.3"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
     "@types/react": "^16.8.21",
     "@types/react-dom": "^16.8.4",
+    "jest": "^24.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
   }
 }
