--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "parcel": "^1.12.3"
   },
   "devDependencies": {
+    "@types/assert": "^1.4.2",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.21",
     "@types/react-dom": "^16.8.4",
